<resources>
    <string name="app_name">WhatUWant</string>
    <string name="head">What U Want</string>
    <string name="nav">What You Want</string>
    <string name="startbutton">Start</string>
    <string name="electrician">Electrician</string>
    <string name="plumber">Plumber</string>
    <string name="carpenter">Carpenter</string>
    <string name="driver">Driver</string>
    <string name="hirebtn">Hire Now</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="haveacc">Already Have an account?</string>
    <string name="reg">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="heading">Enter Details For Registration</string>
    <string name="passwordcnf">Confirm Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginfield">Email</string>
    <string name="phone">Mobile</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">New User?</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="customername">Customer Name</string>

    <string-array name="cities">
        <item>Indore</item>
        <item>Ujjain</item>
        <item>Bhopal</item>
        <item>Nagda</item>
    </string-array>
    <string-array name="payments">
        <item>UPI</item>
        <item>Card</item>
        <item>Cash On Site</item>
    </string-array>
    <string name="title_activity_navigation_user">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>