<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    tools:context=".menu"
    android:background="@drawable/back3"
    >

    <LinearLayout

        android:id="@+id/linearver"
        android:layout_width="407dp"
        android:layout_height="643dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageView
                android:id="@+id/electrician"
                android:layout_width="84dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"

                app:srcCompat="@drawable/electrician" />

            <TextView
                android:id="@+id/electriciantxt"
                android:layout_width="130dp"
                android:textColor="@color/black"
                android:layout_height="43dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:text="@string/electrician"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hirebtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:layout_weight="1"
                android:ellipsize="none"
                android:text="@string/hirebtn"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageView
                android:id="@+id/plumber"
                android:layout_width="84dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/plumber" />

            <TextView
                android:id="@+id/plumbertxt"
                android:layout_width="130dp"
                android:layout_height="43dp"
                android:layout_marginTop="35dp"
                android:textColor="@color/black"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:text="@string/plumber"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hirebtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:layout_weight="1"
                android:ellipsize="none"
                android:text="@string/hirebtn"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageView
                android:id="@+id/driver"
                android:layout_width="84dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/driver" />

            <TextView
                android:id="@+id/drivertxt"
                android:layout_width="130dp"
                android:layout_height="43dp"
                android:layout_marginTop="35dp"
                android:textColor="@color/black"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:text="@string/driver"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hirebtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:layout_marginTop="38dp"
                android:text="@string/hirebtn"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageView
                android:id="@+id/carpenter"
                android:layout_width="84dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/carpenter" />

            <TextView
                android:id="@+id/carpentertxt"
                android:layout_width="130dp"
                android:layout_height="43dp"
                android:layout_marginTop="35dp"
                android:textColor="@color/black"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:text="@string/carpenter"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hirebtn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:layout_marginTop="38dp"
                android:text="@string/hirebtn"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>